RESOLVED FIXED25124
[GTK] many strings still missing translation calls
https://bugs.webkit.org/show_bug.cgi?id=25124
Summary [GTK] many strings still missing translation calls
Gustavo Noronha (kov)
Reported 2009-04-09 15:20:50 PDT
These include the http basic auth dialog, and many GObject properties.
Attachments
adds missing translation calls (70.90 KB, patch)
2009-04-09 15:31 PDT, Gustavo Noronha (kov)
zecke: review+
Gustavo Noronha (kov)
Comment 1 2009-04-09 15:31:33 PDT
Created attachment 29375 [details] adds missing translation calls
Gustavo Noronha (kov)
Comment 2 2009-04-10 05:07:26 PDT
Landed as r42391.
Note You need to log in before you can comment on or make changes to this bug.