WebKit/gtk/webkit/webkitwebhistoryitem.cpp
@@ -23,6 +23,7 @@
 #include "webkitprivate.h"
 
 #include <glib.h>
+#include <glib/gi18n-lib.h>
 
 #include "CString.h"
 #include "HistoryItem.h"
@@ -150,8 +151,8 @@ static void webkit_web_history_item_class_init(WebKitWebHistoryItemClass* klass)
                                     PROP_TITLE,
                                     g_param_spec_string(
                                     "title",
-                                    "Title",
-                                    "The title of the history item",
+                                    _("Title"),
+                                    _("The title of the history item"),
                                     NULL,
                                     WEBKIT_PARAM_READABLE));
 
@@ -166,8 +167,8 @@ static void webkit_web_history_item_class_init(WebKitWebHistoryItemClass* klass)
                                     PROP_ALTERNATE_TITLE,
                                     g_param_spec_string(
                                     "alternate-title",
-                                    "Alternate Title",
-                                    "The alternate title of the history item",
+                                    _("Alternate Title"),
+                                    _("The alternate title of the history item"),
                                     NULL,
                                     WEBKIT_PARAM_READWRITE));
 
@@ -182,8 +183,8 @@ static void webkit_web_history_item_class_init(WebKitWebHistoryItemClass* klass)
                                     PROP_URI,
                                     g_param_spec_string(
                                     "uri",
-                                    "URI",
-                                    "The URI of the history item",
+                                    _("URI"),
+                                    _("The URI of the history item"),
                                     NULL,
                                     WEBKIT_PARAM_READABLE));
 
@@ -198,8 +199,8 @@ static void webkit_web_history_item_class_init(WebKitWebHistoryItemClass* klass)
                                     PROP_ORIGINAL_URI,
                                     g_param_spec_string(
                                     "original-uri",
-                                    "Original URI",
-                                    "The original URI of the history item",
+                                    _("Original URI"),
+                                    _("The original URI of the history item"),
                                     NULL,
                                     WEBKIT_PARAM_READABLE));
 
@@ -214,8 +215,8 @@ static void webkit_web_history_item_class_init(WebKitWebHistoryItemClass* klass)
                                     PROP_LAST_VISITED_TIME,
                                     g_param_spec_double(
                                     "last-visited-time",
-                                    "Last visited Time",
-                                    "The time at which the history item was last visited",
+                                    _("Last visited Time"),
+                                    _("The time at which the history item was last visited"),
                                     0, G_MAXDOUBLE, 0,
                                     WEBKIT_PARAM_READABLE));
 
