WebKit/gtk/webkit/webkitwebnavigationaction.cpp
@@ -22,6 +22,7 @@
 #include <wtf/Assertions.h>
 #include "FrameLoaderTypes.h"
 
+#include <glib/gi18n-lib.h>
 #include "webkitwebnavigationaction.h"
 #include "webkitprivate.h"
 #include "webkitenumtypes.h"
@@ -148,8 +149,8 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
      */
     g_object_class_install_property(objectClass, PROP_REASON,
                                     g_param_spec_enum("reason",
-                                                      "Reason",
-                                                      "The reason why this navigation is occurring",
+                                                      _("Reason"),
+                                                      _("The reason why this navigation is occurring"),
                                                       WEBKIT_TYPE_WEB_NAVIGATION_REASON,
                                                       WEBKIT_WEB_NAVIGATION_REASON_OTHER,
                                                       (GParamFlags)(WEBKIT_PARAM_READWRITE | G_PARAM_CONSTRUCT)));
@@ -163,8 +164,8 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
      */
     g_object_class_install_property(objectClass, PROP_ORIGINAL_URI,
                                     g_param_spec_string("original-uri",
-                                                        "Original URI",
-                                                        "The URI that was requested as the target for the navigation",
+                                                        _("Original URI"),
+                                                        _("The URI that was requested as the target for the navigation"),
                                                         "",
                                                         (GParamFlags)(WEBKIT_PARAM_READWRITE | G_PARAM_CONSTRUCT)));
     /**
@@ -176,8 +177,8 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
      */
     g_object_class_install_property(objectClass, PROP_BUTTON,
                                     g_param_spec_int("button",
-                                                     "Button",
-                                                     "The button used to click",
+                                                     _("Button"),
+                                                     _("The button used to click"),
                                                      -1,
                                                      G_MAXINT,
                                                      -1,
@@ -192,8 +193,8 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
      */
     g_object_class_install_property(objectClass, PROP_MODIFIER_STATE,
                                     g_param_spec_int("modifier-state",
-                                                     "Modifier state",
-                                                     "A bitmask representing the state of the modifier keys",
+                                                     _("Modifier state"),
+                                                     _("A bitmask representing the state of the modifier keys"),
                                                      0,
                                                      G_MAXINT,
                                                      0,
