WebKit/gtk/webkit/webkitwebview.cpp
@@ -55,6 +55,7 @@
 #include "FrameLoaderTypes.h"
 #include "HitTestRequest.h"
 #include "HitTestResult.h"
+#include <glib/gi18n-lib.h>
 #include "GraphicsContext.h"
 #include "InspectorClientGtk.h"
 #include "FrameLoader.h"
@@ -1711,8 +1712,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_TITLE,
                                     g_param_spec_string("title",
-                                                        "Title",
-                                                        "Returns the @web_view's document title",
+                                                        _("Title"),
+                                                        _("Returns the @web_view's document title"),
                                                         NULL,
                                                         WEBKIT_PARAM_READABLE));
 
@@ -1725,8 +1726,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_URI,
                                     g_param_spec_string("uri",
-                                                        "URI",
-                                                        "Returns the current URI of the contents displayed by the @web_view",
+                                                        _("URI"),
+                                                        _("Returns the current URI of the contents displayed by the @web_view"),
                                                         NULL,
                                                         WEBKIT_PARAM_READABLE));
 
@@ -1739,8 +1740,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_COPY_TARGET_LIST,
                                     g_param_spec_boxed("copy-target-list",
-                                                       "Copy target list",
-                                                       "The list of targets this web view supports for clipboard copying",
+                                                       _("Copy target list"),
+                                                       _("The list of targets this web view supports for clipboard copying"),
                                                        GTK_TYPE_TARGET_LIST,
                                                        WEBKIT_PARAM_READABLE));
 
@@ -1753,15 +1754,15 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_PASTE_TARGET_LIST,
                                     g_param_spec_boxed("paste-target-list",
-                                                       "Paste target list",
-                                                       "The list of targets this web view supports for clipboard pasting",
+                                                       _("Paste target list"),
+                                                       _("The list of targets this web view supports for clipboard pasting"),
                                                        GTK_TYPE_TARGET_LIST,
                                                        WEBKIT_PARAM_READABLE));
 
     g_object_class_install_property(objectClass, PROP_SETTINGS,
                                     g_param_spec_object("settings",
-                                                        "Settings",
-                                                        "An associated WebKitWebSettings instance",
+                                                        _("Settings"),
+                                                        _("An associated WebKitWebSettings instance"),
                                                         WEBKIT_TYPE_WEB_SETTINGS,
                                                         WEBKIT_PARAM_READWRITE));
 
@@ -1774,8 +1775,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_WEB_INSPECTOR,
                                     g_param_spec_object("web-inspector",
-                                                        "Web Inspector",
-                                                        "The associated WebKitWebInspector instance",
+                                                        _("Web Inspector"),
+                                                        _("The associated WebKitWebInspector instance"),
                                                         WEBKIT_TYPE_WEB_INSPECTOR,
                                                         WEBKIT_PARAM_READABLE));
 
@@ -1795,15 +1796,15 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
 
     g_object_class_install_property(objectClass, PROP_EDITABLE,
                                     g_param_spec_boolean("editable",
-                                                         "Editable",
-                                                         "Whether content can be modified by the user",
+                                                         _("Editable"),
+                                                         _("Whether content can be modified by the user"),
                                                          FALSE,
                                                          WEBKIT_PARAM_READWRITE));
 
     g_object_class_install_property(objectClass, PROP_TRANSPARENT,
                                     g_param_spec_boolean("transparent",
-                                                         "Transparent",
-                                                         "Whether content has a transparent background",
+                                                         _("Transparent"),
+                                                         _("Whether content has a transparent background"),
                                                          FALSE,
                                                          WEBKIT_PARAM_READWRITE));
 
@@ -1816,8 +1817,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_ZOOM_LEVEL,
                                     g_param_spec_float("zoom-level",
-                                                       "Zoom level",
-                                                       "The level of zoom of the content",
+                                                       _("Zoom level"),
+                                                       _("The level of zoom of the content"),
                                                        G_MINFLOAT,
                                                        G_MAXFLOAT,
                                                        1.0f,
@@ -1832,8 +1833,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     */
     g_object_class_install_property(objectClass, PROP_FULL_CONTENT_ZOOM,
                                     g_param_spec_boolean("full-content-zoom",
-                                                         "Full content zoom",
-                                                         "Whether the full content is scaled when zooming",
+                                                         _("Full content zoom"),
+                                                         _("Whether the full content is scaled when zooming"),
                                                          FALSE,
                                                          WEBKIT_PARAM_READWRITE));
 
@@ -1846,8 +1847,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
      */
     g_object_class_install_property(objectClass, PROP_ENCODING,
                                     g_param_spec_string("encoding",
-                                                        "Encoding",
-                                                        "The default encoding of the web view",
+                                                        _("Encoding"),
+                                                        _("The default encoding of the web view"),
                                                         NULL,
                                                         WEBKIT_PARAM_READABLE));
 
@@ -1860,8 +1861,8 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
      */
     g_object_class_install_property(objectClass, PROP_CUSTOM_ENCODING,
                                     g_param_spec_string("custom-encoding",
-                                                        "Custom Encoding",
-                                                        "The custom encoding of the web view",
+                                                        _("Custom Encoding"),
+                                                        _("The custom encoding of the web view"),
                                                         NULL,
                                                         WEBKIT_PARAM_READWRITE));
 
